# dgherasim_learn_qml

./: .gitignore
anchor_example/: CMakeLists.txt  main.qml
layout_example/: CMakeLists.txt  main.qml
lists_and_text_input/: CMakeLists.txt  data.h  databasemodel.cpp  databasemodel.h  datastructure.cpp  datastructure.h  main.cpp  main.qml  typelistmodel.cpp  typelistmodel.h  typelistmodelmanager.cpp  typelistmodelmanager.h  typelistmodelproxy.cpp  typelistmodelproxy.h
rectangle_popup_mouse_area/: CMakeLists.txt  main.qml
two_lists_only_qml/: CMakeLists.txt  MyDescriptionsList.qml  MyNamesList.qml  NamesList.qml  main.qml  qml.qrc
